--- a/public/css/landingpage.css
+++ b/public/css/landingpage.css
@@ -1,6 +1,13 @@
 body, html {
 	height: 100%;
 	width: 100%;
+	min-width: 940px;
+}
+
+.navbar {
+	position: absolute;
+	top:0;
+	box-shadow: 0 2px 4px #272727;
 }
 
 .landingWrapper {
@@ -16,6 +23,7 @@ body, html {
 	margin: 0 auto;
 	width: auto;
 	text-align: center;
+	min-width:940px;
 }
 .welcome h2 {
 	color: #FFF;
@@ -58,7 +66,8 @@ body, html {
 .footer {
 	height: 70px;
 	width: 100%;
-	position: fixed;
+	min-width: 940px;
+	position: absolute;
 	bottom: 0;
 	background: #000;
 	box-shadow: 0 -3px 3px #000;
