Minor CSS tidbits

--- a/views/landingpage/layout.jade
+++ b/views/landingpage/layout.jade
@@ -32,7 +32,7 @@ html
 		.client
 			button.btn.btn-large.btn-primary#client(href="/client") Client
 		.welcome
-			h2 Welcome to Aspire Sounds
+			h2 Aspire Sounds
 		.footer.text-center
 			p.muted.footer-links
 				a(href="/about") About
